--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "formik": "^2.4.5",
     "framer-motion": "^10.18.0",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.0.1",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
