--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
+    "react-select": "^5.8.0",
+    "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "yup": "^1.3.3"
   },
