--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@nextui-org/react": "^2.2.9",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.7",
@@ -21,6 +26,7 @@
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-select": "^5.8.0",
+    "react-sortablejs": "^6.1.4",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "yup": "^1.3.3"
