--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-sortablejs": "^6.1.4",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.7.4",
     "yup": "^1.3.3"
   },
   "devDependencies": {
