--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.4",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.0.3"
+    "nodemailer": "^6.9.9",
+    "nodemon": "^3.0.3",
+    "socket.io": "^4.7.4"
   }
 }
